--- a/src/interfaz/Principal.form
+++ b/src/interfaz/Principal.form
@@ -332,7 +332,7 @@
         <Component class="javax.swing.JComboBox" name="cmbOperaciones">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="7">
+              <StringArray count="8">
                 <StringItem index="0" value="Cant. Num Pares"/>
                 <StringItem index="1" value="N&#xfa;meros Pares"/>
                 <StringItem index="2" value="Letra C"/>
@@ -340,6 +340,7 @@
                 <StringItem index="4" value="Letra H"/>
                 <StringItem index="5" value="Recorrido Uno"/>
                 <StringItem index="6" value="Recorrido Dos"/>
+                <StringItem index="7" value="Recorrido Tres"/>
               </StringArray>
             </Property>
           </Properties>
